Adicionados sgvs + index HTML

--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@
   <body>
     Aqui vai o código HTML que fará seu site aparecer. Só mais uma adição de texto para criar push origin, ok?
   </body>
+  <img
+    src="assets/svgs/icon-user.svg">
 </html>
